# scarlett-mixer

./: .gitignore  Makefile  README.md  meson.build  meson_options.txt  scarlett-mixer.1
src/: scarlett_mixer.c
